# Ledgerflow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SELECT count(*), max(ingested_at) FROM r.sql  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile
airflow/dags/: transaction_warehouse.py
airflow/dags/sql/: build_daily_aggregates.sql  load_fact_transaction.sql  upsert_dim_merchant.sql  upsert_dim_user.sql
docs/: gcp-deployment.md
docs/screenshots/: README.md
pipeline/: api.py  config.py  consumer.py  db.py  fx.py  models.py  producer.py  transforms.py
sql/: 00_init_databases.sql  01_raw_schema.sql  02_analytics_schema.sql  03_seed_dim_date.sql
tests/: test_api.py  test_fx.py  test_models.py  test_transforms.py
