[project]
name = "transaction-pipeline"
version = "0.1.0"
description = "Real-time financial transaction analytics pipeline: Kafka -> Airflow -> PostgreSQL"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
